# quick-suite-open-data

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.py  cdk.json  integration-guide.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
config/: roda-tools.yaml  s3-tools.yaml  sources.example.yaml
docs/: adding-sources.md  agentcore-registration.md  sources-config.md
examples/roda-discovery/: scenario.yaml
lambdas/arxiv-search/: handler.py
lambdas/biorxiv-search/: handler.py
lambdas/catalog-quality-check/: handler.py
lambdas/catalog-sync/: handler.py
lambdas/claws-resolver/: handler.py
lambdas/dataset-loader/: handler.py
lambdas/federated-search/: handler.py
lambdas/memory/: handler.py
lambdas/pubmed-search/: handler.py
lambdas/pyarrow-layer/: Dockerfile
lambdas/reagent-search/: handler.py
lambdas/redshift-browse/: handler.py
lambdas/redshift-preview/: handler.py
lambdas/redshift-query/: handler.py
lambdas/register-source/: handler.py
lambdas/research-search/: handler.py
lambdas/roda-search/: handler.py
lambdas/s3-browse/: handler.py
lambdas/s3-load/: handler.py
lambdas/s3-preview/: handler.py
lambdas/semantic-scholar-search/: handler.py
lambdas/snowflake-browse/: handler.py
scripts/: post-deploy.sh
stacks/: open_data_stack.py
tests/: conftest.py  test_catalog_quality_check.py  test_catalog_sync.py  test_dataset_loader.py  test_federated_search.py  test_literature_sources.py  test_memory_source.py  test_quality_sources.py  test_redshift_tools.py  test_research_sources.py  test_roda_search.py  test_s3_tools.py  test_security.py  test_snowflake_tools.py  test_source_registry.py
(+11 files in other folders)
