[project]
name = "quick-suite-open-data"
version = "0.1.0"
description = "RODA public datasets and institutional S3 browser for Amazon Quick Suite"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "requests>=2.31",
    "ruff>=0.4",
    "boto3>=1.26",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Substrate running (auto-started from ~/src/substrate)",
    "e2e: end-to-end tests against a deployed QuickSuiteOpenData stack (real AWS; set AWS_PROFILE=aws)",
    "qs_write: QuickSight write test within E2E suite — requires QS_E2E_ALLOW_WRITES=true",
]
